# liblandstalker

./: .gitignore  CMakeLists.txt  Makefile  README.md  dependencies.cmake  landstalker.sln  landstalker.vcxproj  landstalker.vcxproj.filters
.github/workflows/: ubuntu_release.yaml  windows_release.yaml
landstalker/: CMakeLists.txt
landstalker/2d_maps/: CMakeLists.txt
landstalker/2d_maps/include/: Blockmap2D.h  Tilemap.h
landstalker/2d_maps/src/: Blockmap2D.cpp  Tilemap.cpp
landstalker/3d_maps/: CMakeLists.txt
landstalker/3d_maps/include/: BlockmapIsometric.h
landstalker/3d_maps/src/: BlockmapIsometric.cpp
landstalker/behaviours/: CMakeLists.txt
landstalker/behaviours/src/: Behaviours.cpp
landstalker/blockset/: CMakeLists.txt
landstalker/include/: CMakeLists.txt
landstalker/include/landstalker/2d_maps/: Blockmap2D.h  Tilemap.h  Tilemap2DRLE.h
landstalker/include/landstalker/3d_maps/: BlockmapIsometric.h  Doors.h  MapToTmx.h  RoomToTmx.h  TileSwaps.h  Tilemap3DCmp.h
landstalker/include/landstalker/behaviours/: BehaviourYamlConverter.h  Behaviours.h
landstalker/include/landstalker/blockset/: Block.h  BlocksetCmp.h
landstalker/include/landstalker/main/: AsmFile.h  AsmFile_inl.h  AsmUtils.h  DataManager.h  DataTypes.h  EntryPreferences.h  GameData.h  GraphicsData.h  ImageBuffer.h  Rom.h  RomLabels.h  RomOffsets.h  RoomData.h  ScriptData.h  SpriteData.h  StringData.h
landstalker/include/landstalker/misc/: BitBarrel.h  BitBarrelWriter.h  DefaultLabels.h  LZ77.h  Labels.h  Literals.h  Point.h  Utils.h
landstalker/include/landstalker/palettes/: Palette.h
landstalker/include/landstalker/rooms/: Chests.h  Entity.h  Flags.h  Room.h  RoomDialogueTable.h  WarpList.h
landstalker/include/landstalker/script/: ProgressFlags.h  Script.h  ScriptFunction.h  ScriptTable.h  ScriptTableEntry.h
landstalker/include/landstalker/sprites/: SpriteFrame.h
landstalker/include/landstalker/text/: Charset.h  EndCreditString.h  HuffmanString.h  HuffmanTree.h  HuffmanTrees.h  IntroString.h  LSString.h
landstalker/include/landstalker/tileset/: AnimatedTileset.h  Tile.h  TileAttributes.h  Tileset.h
landstalker/main/: CMakeLists.txt
landstalker/main/include/: AsmFile.h  ImageBuffer.h
landstalker/main/src/: AsmFile.cpp  ImageBuffer.cpp
landstalker/misc/: CMakeLists.txt
landstalker/misc/include/: Point.h
landstalker/misc/src/: BitBarrel.cpp  BitBarrelWriter.cpp
landstalker/palettes/: CMakeLists.txt
landstalker/rooms/: CMakeLists.txt
landstalker/script/: CMakeLists.txt
landstalker/script/include/: ScriptFunction.h
landstalker/script/src/: ProgressFlags.cpp  ScriptFunction.cpp
landstalker/sprites/: CMakeLists.txt
landstalker/sprites/include/: SpriteFrame.h
landstalker/src/: CMakeLists.txt
landstalker/src/2d_maps/: Blockmap2D.cpp  CMakeLists.txt  Tilemap.cpp  Tilemap2DRLE.cpp
landstalker/src/3d_maps/: BlockmapIsometric.cpp  CMakeLists.txt  Doors.cpp  MapToTmx.cpp  RoomToTmx.cpp  TileSwaps.cpp  Tilemap3DCmp.cpp
landstalker/src/behaviours/: BehaviourYamlConverter.cpp  Behaviours.cpp  CMakeLists.txt
landstalker/src/blockset/: Block.cpp  BlocksetCmp.cpp  CMakeLists.txt
landstalker/src/main/: AsmFile.cpp  AsmUtils.cpp  CMakeLists.txt  DataManager.cpp  DataTypes.cpp  EntryPreferences.cpp  GameData.cpp  GraphicsData.cpp  ImageBuffer.cpp  Rom.cpp  RomLabels.cpp  RomOffsets.cpp  RoomData.cpp  ScriptData.cpp  SpriteData.cpp  StringData.cpp
landstalker/src/misc/: BitBarrel.cpp  BitBarrelWriter.cpp  CMakeLists.txt  DefaultLabels.cpp  LZ77.cpp  Labels.cpp  Utils.cpp
landstalker/src/palettes/: CMakeLists.txt  Palette.cpp
landstalker/src/rooms/: CMakeLists.txt  Chests.cpp  Entity.cpp  Flags.cpp  Room.cpp  RoomDialogueTable.cpp  WarpList.cpp
landstalker/src/script/: CMakeLists.txt  ProgressFlags.cpp  Script.cpp  ScriptFunction.cpp  ScriptTable.cpp  ScriptTableEntry.cpp
landstalker/src/sprites/: CMakeLists.txt  SpriteFrame.cpp
landstalker/src/text/: CMakeLists.txt  Charset.cpp  EndCreditString.cpp  HuffmanString.cpp  HuffmanTree.cpp  HuffmanTrees.cpp  IntroString.cpp  LSString.cpp
landstalker/src/tileset/: AnimatedTileset.cpp  CMakeLists.txt  Tile.cpp  TileAttributes.cpp  Tileset.cpp
landstalker/text/: CMakeLists.txt
landstalker/tileset/: CMakeLists.txt
landstalker/tileset/src/: Tile.cpp
src/2d_maps/include/: Blockmap2D.h  Tilemap.h
src/2d_maps/src/: Blockmap2D.cpp  Tilemap.cpp
src/3d_maps/include/: BlockmapIsometric.h
src/3d_maps/src/: BlockmapIsometric.cpp
src/behaviours/include/: Behaviours.h
src/behaviours/src/: Behaviours.cpp
src/main/include/: ImageBuffer.h  Rom.h
src/main/src/: ImageBuffer.cpp
src/sprites/src/: SpriteFrame.cpp
tests/: CMakeLists.txt  test_lz77.cpp  test_tilemap3d.cpp
