cmake_minimum_required(VERSION 3.16)
set(MODULE_NAME "landstalker")
project(${MODULE_NAME})
set(CMAKE_CXX_STANDARD 20)

add_library(${MODULE_NAME} STATIC)
if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    target_compile_options(${MODULE_NAME} PRIVATE -D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
endif()
add_subdirectory("src")
target_include_directories(${MODULE_NAME} PUBLIC "include")
if(EMSCRIPTEN)
    add_compile_options(-sUSE_LIBPNG)
    add_definitions("-sUSE_LIBPNG -fexceptions")
    set(CMAKE_EXE_LINKER_FLAGS "-sASSERTIONS -sUSE_LIBPNG")
else()
    add_dependencies(${MODULE_NAME} png_static) 
    target_link_libraries(${MODULE_NAME} PRIVATE png_static)
endif()

add_dependencies(${MODULE_NAME} yaml-cpp) 

target_link_libraries(${MODULE_NAME} PRIVATE yaml-cpp)
