cmake_minimum_required(VERSION 3.16)

add_subdirectory("2d_maps")
add_subdirectory("3d_maps")
add_subdirectory("behaviours")
add_subdirectory("blockset")
add_subdirectory("main")
add_subdirectory("misc")
add_subdirectory("palettes")
add_subdirectory("rooms")
add_subdirectory("script")
add_subdirectory("sprites")
add_subdirectory("text")
add_subdirectory("tileset")

